Task 12 of DOM Manipulations

--- a/newindex.html
+++ b/newindex.html
@@ -30,7 +30,7 @@
             </form>
             <h2 class="title">Items</h2>
             <ul id="items" class="list-group">
-                <li class="list-group-item">Item 1 <button class="btn btn-danger btn-sm float-right delete">X</button>
+                <!-- <li class="list-group-item">Item 1 <button class="btn btn-danger btn-sm float-right delete">X</button>
                     <button class="btn btn-default btn-sm float-right edit">+</button>
                  </li>
                 <li class="list-group-item">Item 2 <button class="btn btn-danger btn-sm float-right delete">X</button>
@@ -41,7 +41,7 @@
                 </li>
                 <li class="list-group-item">Item 4 <button class="btn btn-danger btn-sm float-right delete">X</button>
                     <button class="btn btn-default btn-sm float-right edit">+</button>
-                </li>
+                </li> -->
             </ul>
         </div>
     </div>
